# MCP

./: pyproject.toml
MCP/Prompts/workflow/: allconnection.md
MCP/server/: prompt.py
Output/: snake & ladder.html
Output/Output/: Protfolio.html  snake & ladder.html
Proton/: Client_Agent.py  Server.json
