[project]
name = "n8n"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.135.1",
    "flask>=3.1.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
    "dotenv>=0.9.9",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-groq>=0.2.0",
    "mcp-use>=1.7.0",
    "langchain-ollama>=1.0.1",
]
